--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="block-1">
+      <div class="block">
         <div class="logo">
           LOGO
         </div>
@@ -19,7 +19,7 @@
           <li><a href="google.com">link-three</a></li>
         </ul>
       </div>
-      <div class="block-2">
+      <div class="block">
         <button class="notifications">
           1 new notification
         </button>
